[gd_scene load_steps=7 format=3 uid="uid://by5qpv1a7wc8n"]

[ext_resource type="Script" path="res://tests/firestore/firestore.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dey7w6ieyntb" path="res://assets/buttons/normal_button.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dg74q2h440e5k" path="res://assets/background.png" id="3"]
[ext_resource type="PackedScene" uid="uid://fnf1abx32uum" path="res://assets/buttons/normal_button.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://d20ruxpv04p8y" path="res://assets/buttons/normal_button_disabled.png" id="6"]
[ext_resource type="Script" path="res://assets/buttons/normal_button.gd" id="7"]

[node name="firestore" type="Node2D"]
script = ExtResource("1")

[node name="background" type="TextureRect" parent="."]
offset_left = 5.59372
offset_top = 2.00226
offset_right = 1029.59
offset_bottom = 602.002
texture = ExtResource("3")

[node name="title" type="Label" parent="."]
offset_left = 376.0
offset_top = 11.8108
offset_right = 557.0
offset_bottom = 55.8108
text = "Firestore Tests"
horizontal_alignment = 1
uppercase = true

[node name="back" parent="." instance=ExtResource("5")]
offset_right = 190.354
offset_bottom = 44.6465
label = "Back"

[node name="test_firestore" type="TextureButton" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 65.0
offset_right = 190.0
offset_bottom = 110.0
texture_normal = ExtResource("2")
texture_disabled = ExtResource("6")
script = ExtResource("7")
label = "Test Firestore"

[node name="label" type="RichTextLabel" parent="test_firestore"]
layout_mode = 0
offset_left = 10.0
offset_right = 180.0
offset_bottom = 45.0
mouse_filter = 2
bbcode_enabled = true

[node name="console" type="RichTextLabel" parent="."]
offset_left = 249.251
offset_top = 117.012
offset_right = 945.251
offset_bottom = 522.012
bbcode_enabled = true
scroll_following = true

[node name="login_check" type="CheckBox" parent="." groups=["tests"]]
offset_left = 10.0
offset_top = 131.0
offset_right = 34.0
offset_bottom = 155.0
mouse_filter = 2
disabled = true
button_mask = 0

[node name="Label" type="Label" parent="login_check"]
layout_mode = 0
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
text = "Login"

[node name="add_document" type="CheckBox" parent="." groups=["tests"]]
offset_left = 10.0
offset_top = 155.0
offset_right = 34.0
offset_bottom = 179.0
mouse_filter = 2
disabled = true
button_mask = 0

[node name="Label" type="Label" parent="add_document"]
layout_mode = 0
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
text = "Add Document"

[node name="get_document" type="CheckBox" parent="." groups=["tests"]]
offset_left = 10.0
offset_top = 180.0
offset_right = 34.0
offset_bottom = 204.0
mouse_filter = 2
disabled = true
button_mask = 0

[node name="Label" type="Label" parent="get_document"]
layout_mode = 0
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
text = "Get Document"

[node name="print_document" type="CheckBox" parent="." groups=["tests"]]
offset_left = 10.0
offset_top = 203.0
offset_right = 34.0
offset_bottom = 227.0
mouse_filter = 2
disabled = true
button_mask = 0

[node name="Label" type="Label" parent="print_document"]
layout_mode = 0
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
text = "Print Document"

[node name="update_document" type="CheckBox" parent="." groups=["tests"]]
offset_left = 10.0
offset_top = 224.0
offset_right = 34.0
offset_bottom = 248.0
mouse_filter = 2
disabled = true
button_mask = 0

[node name="Label" type="Label" parent="update_document"]
layout_mode = 0
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
text = "Update Document"

[node name="delete_item_from_document" type="CheckBox" parent="." groups=["tests"]]
auto_translate_mode = 1
offset_left = 10.0
offset_top = 252.0
offset_right = 34.0
offset_bottom = 276.0
mouse_filter = 2
disabled = true
button_mask = 0

[node name="Label" type="Label" parent="delete_item_from_document"]
auto_translate_mode = 1
layout_mode = 0
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
text = "Delete from document"

[node name="get_document_2" type="CheckBox" parent="." groups=["tests"]]
offset_left = 10.0
offset_top = 275.0
offset_right = 34.0
offset_bottom = 299.0
mouse_filter = 2
disabled = true
button_mask = 0

[node name="Label" type="Label" parent="get_document_2"]
layout_mode = 0
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
text = "Get Document"

[node name="print_document_2" type="CheckBox" parent="." groups=["tests"]]
offset_left = 10.0
offset_top = 295.0
offset_right = 34.0
offset_bottom = 319.0
mouse_filter = 2
disabled = true
button_mask = 0

[node name="Label" type="Label" parent="print_document_2"]
layout_mode = 0
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
text = "Print Document"

[node name="delete_document" type="CheckBox" parent="." groups=["tests"]]
offset_left = 10.0
offset_top = 314.0
offset_right = 34.0
offset_bottom = 338.0
mouse_filter = 2
disabled = true
button_mask = 0

[node name="Label" type="Label" parent="delete_document"]
layout_mode = 0
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
text = "Delete Document"

[node name="run_query" type="CheckBox" parent="." groups=["tests"]]
offset_left = 10.0
offset_top = 338.0
offset_right = 34.0
offset_bottom = 362.0
mouse_filter = 2
disabled = true
button_mask = 0

[node name="Label" type="Label" parent="run_query"]
layout_mode = 0
offset_left = 26.0596
offset_top = -3.06488
offset_right = 76.0596
offset_bottom = 22.9351
text = "Run Query"

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="test_firestore" to="." method="_on_test_firestore_pressed"]
